feat: add basic page layout and style

--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: 2vw;
 }
 
 .container {
@@ -9,16 +8,30 @@
   margin: 0 auto;
 }
 
+// Header
+
 .header {
   background: #000000;
   width: 100%;
-  height: 100vh;
+  height: 800px;
 }
 
-.header_nav {
+// Navigation
+
+.navigation {
   display: flex;
   background: #000000;
   height: 83px;
+  margin: auto;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.navigation_menu {
+  display: flex;
+  list-style: none;
+  color: #ffffff;
+  font-size: 14px;
 }
 
 .banner_wrapper {
@@ -33,14 +46,16 @@
 
 .header_banner {
   width: 90%;
-  height: 90vh;
+  height: 700px;
   background: red;
 }
+
+// Slider section
 
 .slider_wrapper {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 700px;
   align-items: center;
   background: #000000;
 }
@@ -57,19 +72,70 @@
   background: gray;
 }
 
+.slider_navigation {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  list-style: none;
+
+  &--links {
+    &-active {
+      text-decoration: underline;
+    }
+  }
+}
+
+.slider_container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 345px;
+  border: 1px solid black;
+
+  &--item {
+    margin: 5px;
+    width: 200px;
+    border: 1px solid black;
+
+    &-hide {
+      width: 100px;
+      border: 1px solid black;
+      margin: 5px;
+    }
+  }
+
+}
+
+.slider_subcaption {
+  display: flex;
+}
+
+// Video wrapper section
+
+.heading_video {
+  position: relative;
+  top: -50px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
 .video_wrapper {
   height: 700px;
   width: 100%;
   background-color: #ffffff;
+  border: 1px solid black
 }
 
 .video {
-  position: relative;
+
   width: 70%;
   height: 400px;
   background: gray;
   margin: 0 auto;
-  top: -50px;
+  border: 1px solid black;
+
+
 }
 
 .video_description {
@@ -81,20 +147,333 @@
 
 .form_submit {
   width: 70%;
-  margin: 50px auto;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.checkbox {
+  text-align: center;
+}
+
+// Price repair section
+
+.hedding_price {
   text-align: center;
 }
 
 .price_wrapper {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 300px;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+  align-items: center;
+  top: 30px;
 }
 
 .price_card {
-    margin: 10px;
-    width: 20%;
-    height: 300px;
-    background-color: gray;
+  position: relative;
+  margin: 10px;
+  width: 20%;
+  height: 300px;
+  background-color: gray;
+}
+
+.card_description {
+  position: absolute;
+  width: 95%;
+  height: 150px;
+  background-color: #ffffff;
+  bottom: 20px;
+
+}
+
+// Contact form section
+.contact_form {
+  display: flex;
+  width: 90%;
+  height: 725px;
+  background-color: gray;
+  margin-top: 20px;
+}
+
+.features_list {
+  display: block;
+  list-style: none;
+}
+
+.features_list_item {
+  display: flex;
+}
+
+.features_list--number {
+  display: block;
+  background-color: #E3B873;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.features_list--text {
+  display: block;
+}
+
+.c_form {
+  background-color: #000000;
+  color: #ffffff;
+
+  &--discont {
+    display: flex;
+    background-color: #ffffff;
+    color: #e3b873;
+
+    &-icon {
+      width: 30px;
+      height: 30px;
+    }
+  }
+}
+
+
+// Galery section
+
+.galery {
+  display: flex;
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.galery_navigation {
+  width: 50%;
+  height: 500px;
+  border: 1px solid #ffffff;
+
+  &--list {
+    list-style: none;
+
+    &-hover {
+      color: #e3b873;
+      text-decoration: underline;
+    }
+  }
+}
+
+.galery_photo {
+  display: flex;
+}
+
+.galery_photo_column {
+  width: 50%;
+  height: 500px;
+
+  &--img {
+    width: 50px;
+    height: 100px;
+  }
+}
+
+
+// Price design project section
+
+.design_project {
+  &--heading {
+    text-align: center;
+  }
+
+  &--description {
+    text-align: center;
+    width: 60%;
+    margin: auto;
+  }
+}
+
+
+// Steps to goal section
+
+.steps_wrapper {
+  display: flex;
+  width: 100%;
+  height: 700px;
+  align-items: center;
+  background: #000000;
+}
+
+.steps_description {
+  width: 40%;
+  height: 600px;
+  background: gray;
+}
+
+.steps {
+  width: 60%;
+  height: 600px;
+  background: gray;
+}
+
+.steps_navigation {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  list-style: none;
+
+  &--links {
+    &-active {
+      text-decoration: underline;
+    }
+  }
+}
+
+.steps_container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 345px;
+  border: 1px solid black;
+
+  &--item {
+    margin: 5px;
+    width: 200px;
+    border: 1px solid black;
+
+    &-hide {
+      width: 100px;
+      border: 1px solid black;
+      margin: 5px;
+    }
+  }
+
+}
+
+.steps_subcaption {
+  display: flex;
+}
+
+// Team section
+
+.team {
+  &--heading {
+  text-align: center;
+}
+&--description {
+   text-align: center;
+    width: 60%;
+    margin: auto;
+}
+
+}
+
+.team_wrapper {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+  align-items: center;
+  top: 30px;
+}
+
+.team_card {
+  position: relative;
+  margin: 10px;
+  width: 20%;
+  height: 300px;
+  background-color: gray;
+}
+
+.team_card_description {
+  position: absolute;
+  width: 95%;
+  height: 150px;
+  background-color: #ffffff;
+  bottom: 20px;
+  &--exp {
+    background-color: #E3B873;
+    color:#ffffff;
+  }
+}
+
+
+
+// Cliets section
+
+.clients {
+  &--heading {
+  text-align: center;
+}
+&--description {
+   text-align: center;
+    width: 60%;
+    margin: auto;
+}
+
+}
+
+.clients_wrapper {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+  align-items: center;
+  top: 30px;
+}
+
+.clients_card {
+  position: relative;
+  margin: 10px;
+  width: 20%;
+  height: 300px;
+  background-color: gray;
+}
+
+.clients_card_description {
+  position: absolute;
+  width: 95%;
+  height: 150px;
+  background-color: #ffffff;
+  bottom: 20px;
+  &--exp {
+    background-color: #E3B873;
+    color:#ffffff;
+  }
+}
+
+.clients_project {
+  display: flex;
+  background-color: #E3B873;
+}
+
+//Contacts sections
+.contacts_form_footer_wrapper {
+  margin: auto;
+  width: 50%;
+  height: 400px;
+  background-color: #000000;
+}
+
+.contacts_form_footer{
+  width: 70%;
+  margin: auto;
+  color: #ffffff;
+  &--name_phone{
+    display: flex;
+  }
+}
+
+.contacts{
+  text-align: center;
+}
+
+.map {
+  width: 500px;
+  height: 400px;
+}
+
+// Footer
+
+.footer {
+  background-color: #000000;
+  height: 50px;
+  width: 100%;
+  margin: auto;
 }
