--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: 2vw;
 }
 
 .container {
@@ -12,15 +11,28 @@
 .header {
   background: #000000;
   width: 100%;
-  height: 100vh;
+  height: 800px;
 }
 
-.header_nav {
+.navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   background: #000000;
   height: 83px;
+  margin: auto;
+  width: 100%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.navigation_menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  color: #ffffff;
+  font-size: 14px;
 }
 
 .banner_wrapper {
@@ -39,7 +51,7 @@
 
 .header_banner {
   width: 90%;
-  height: 90vh;
+  height: 700px;
   background: red;
 }
 
@@ -48,7 +60,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 700px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -67,19 +79,70 @@
   background: gray;
 }
 
+.slider_navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 40px;
+  list-style: none;
+}
+
+.slider_navigation--links-active {
+  text-decoration: underline;
+}
+
+.slider_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 345px;
+  border: 1px solid black;
+}
+
+.slider_container--item {
+  margin: 5px;
+  width: 200px;
+  border: 1px solid black;
+}
+
+.slider_container--item-hide {
+  width: 100px;
+  border: 1px solid black;
+  margin: 5px;
+}
+
+.slider_subcaption {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.heading_video {
+  position: relative;
+  top: -50px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
 .video_wrapper {
   height: 700px;
   width: 100%;
   background-color: #ffffff;
+  border: 1px solid black;
 }
 
 .video {
-  position: relative;
   width: 70%;
   height: 400px;
   background: gray;
   margin: 0 auto;
-  top: -50px;
+  border: 1px solid black;
 }
 
 .video_description {
@@ -91,7 +154,15 @@
 
 .form_submit {
   width: 70%;
-  margin: 50px auto;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.checkbox {
+  text-align: center;
+}
+
+.hedding_price {
   text-align: center;
 }
 
@@ -99,17 +170,334 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
-  height: 300px;
+  height: 400px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 30px;
 }
 
 .price_card {
+  position: relative;
   margin: 10px;
   width: 20%;
   height: 300px;
   background-color: gray;
+}
+
+.card_description {
+  position: absolute;
+  width: 95%;
+  height: 150px;
+  background-color: #ffffff;
+  bottom: 20px;
+}
+
+.contact_form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 90%;
+  height: 725px;
+  background-color: gray;
+  margin-top: 20px;
+}
+
+.features_list {
+  display: block;
+  list-style: none;
+}
+
+.features_list_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.features_list--number {
+  display: block;
+  background-color: #E3B873;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.features_list--text {
+  display: block;
+}
+
+.c_form {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.c_form--discont {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #ffffff;
+  color: #e3b873;
+}
+
+.c_form--discont-icon {
+  width: 30px;
+  height: 30px;
+}
+
+.galery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.galery_navigation {
+  width: 50%;
+  height: 500px;
+  border: 1px solid #ffffff;
+}
+
+.galery_navigation--list {
+  list-style: none;
+}
+
+.galery_navigation--list-hover {
+  color: #e3b873;
+  text-decoration: underline;
+}
+
+.galery_photo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.galery_photo_column {
+  width: 50%;
+  height: 500px;
+}
+
+.galery_photo_column--img {
+  width: 50px;
+  height: 100px;
+}
+
+.design_project--heading {
+  text-align: center;
+}
+
+.design_project--description {
+  text-align: center;
+  width: 60%;
+  margin: auto;
+}
+
+.steps_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 700px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #000000;
+}
+
+.steps_description {
+  width: 40%;
+  height: 600px;
+  background: gray;
+}
+
+.steps {
+  width: 60%;
+  height: 600px;
+  background: gray;
+}
+
+.steps_navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 40px;
+  list-style: none;
+}
+
+.steps_navigation--links-active {
+  text-decoration: underline;
+}
+
+.steps_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 345px;
+  border: 1px solid black;
+}
+
+.steps_container--item {
+  margin: 5px;
+  width: 200px;
+  border: 1px solid black;
+}
+
+.steps_container--item-hide {
+  width: 100px;
+  border: 1px solid black;
+  margin: 5px;
+}
+
+.steps_subcaption {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.team--heading {
+  text-align: center;
+}
+
+.team--description {
+  text-align: center;
+  width: 60%;
+  margin: auto;
+}
+
+.team_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 400px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 30px;
+}
+
+.team_card {
+  position: relative;
+  margin: 10px;
+  width: 20%;
+  height: 300px;
+  background-color: gray;
+}
+
+.team_card_description {
+  position: absolute;
+  width: 95%;
+  height: 150px;
+  background-color: #ffffff;
+  bottom: 20px;
+}
+
+.team_card_description--exp {
+  background-color: #E3B873;
+  color: #ffffff;
+}
+
+.clients--heading {
+  text-align: center;
+}
+
+.clients--description {
+  text-align: center;
+  width: 60%;
+  margin: auto;
+}
+
+.clients_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 400px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 30px;
+}
+
+.clients_card {
+  position: relative;
+  margin: 10px;
+  width: 20%;
+  height: 300px;
+  background-color: gray;
+}
+
+.clients_card_description {
+  position: absolute;
+  width: 95%;
+  height: 150px;
+  background-color: #ffffff;
+  bottom: 20px;
+}
+
+.clients_card_description--exp {
+  background-color: #E3B873;
+  color: #ffffff;
+}
+
+.clients_project {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #E3B873;
+}
+
+.contacts_form_footer_wrapper {
+  margin: auto;
+  width: 50%;
+  height: 400px;
+  background-color: #000000;
+}
+
+.contacts_form_footer {
+  width: 70%;
+  margin: auto;
+  color: #ffffff;
+}
+
+.contacts_form_footer--name_phone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.contacts {
+  text-align: center;
+}
+
+.map {
+  width: 500px;
+  height: 400px;
+}
+
+.footer {
+  background-color: #000000;
+  height: 50px;
+  width: 100%;
+  margin: auto;
 }
 /*# sourceMappingURL=style.css.map */
