refactor: upgraid  styles in header and banner section

--- a/style.css
+++ b/style.css
@@ -3,15 +3,140 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url("assets/ProximaNova-Regular.eot");
+  src: url("assets/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("assets/ProximaNova-Regular.woff2") format("woff2"), url("assets/ProximaNova-Regular.woff") format("woff"), url("assets/ProximaNova-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'FuturaBookC';
+  src: url("assets/FuturaBookC.eot");
+  src: url("assets/FuturaBookC.eot?#iefix") format("embedded-opentype"), url("assets/FuturaBookC.woff2") format("woff2"), url("assets/FuturaBookC.woff") format("woff"), url("assets/FuturaBookC.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'FuturaDemiC';
+  src: url("assets/FuturaDemiC.eot");
+  src: url("assets/FuturaDemiC.eot?#iefix") format("embedded-opentype"), url("assets/FuturaDemiC.woff2") format("woff2"), url("assets/FuturaDemiC.woff") format("woff"), url("assets/FuturaDemiC.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'FuturaMediumC';
+  src: url("assets/FuturaMediumC.eot");
+  src: url("assets/FuturaMediumC.eot?#iefix") format("embedded-opentype"), url("assets/FuturaMediumC.woff2") format("woff2"), url("assets/FuturaMediumC.woff") format("woff"), url("assets/FuturaMediumC.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Yeseva One';
+  src: url("assets/YesevaOne.eot");
+  src: url("assets/YesevaOne.eot?#iefix") format("embedded-opentype"), url("assets/YesevaOne.woff2") format("woff2"), url("assets/YesevaOne.woff") format("woff"), url("assets/YesevaOne.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
 }
 
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background: #000000;
   width: 100%;
   height: 800px;
+}
+
+.header_social {
+  width: 6%;
+}
+
+.header_wrapper {
+  width: 94%;
+}
+
+.header_banner {
+  height: 700px;
+  background: red;
+  background: url(assets/banner.jpg);
+}
+
+.header_banner--main_heding {
+  position: relative;
+  top: 50%;
+  font-family: Yeseva One, sans-serif;
+  font-size: 40px;
+  font-weight: normal;
+  line-height: 132.8%;
+  text-transform: uppercase;
+  color: #ffffff;
+  width: 550px;
+}
+
+.header_banner--main_heding-orange {
+  color: #E3B873;
+}
+
+.header_banner--main_description {
+  font-family: FuturaBookC, sans-serif;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 30px;
+  width: 450px;
+  color: #ffffff;
+  margin-top: 20px;
+  margin-bottom: 45px;
+}
+
+.header_banner--cta {
+  width: 207px;
+  height: 51px;
+  background-color: #E3B873;
+  border: 0;
+  font-family: FuturaDemiC, sans-serif;
+  font-size: 13px;
+  text-transform: uppercase;
+  color: #ffffff;
+  cursor: pointer;
+  background: #E3B873;
+  -webkit-box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.3);
+          box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.3);
+  border-radius: 2px;
+}
+
+.header_banner--cta2 {
+  width: 207px;
+  height: 51px;
+  border: 1px solid #ffffff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 2px;
+  font-family: FuturaDemiC, sans-serif;
+  font-size: 13px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background: none;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.banner_text {
+  position: relative;
+  top: 27%;
+  left: 4%;
 }
 
 .navigation {
@@ -22,37 +147,67 @@
   height: 83px;
   margin: auto;
   width: 100%;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .navigation_menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
   list-style: none;
   color: #ffffff;
   font-size: 14px;
 }
 
-.banner_wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+.navigation_menu--logo a {
+  font-family: FuturaDemiC, sans-serif;
+  color: #E3B873;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #E3B873;
+  margin-right: 40px;
 }
 
-.social {
-  background: #000000;
-  width: 10%;
+.navigation_menu--links a {
+  color: #ffffff;
+  font-family: FuturaBookC, sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+  text-decoration: none;
 }
 
-.header_banner {
-  width: 90%;
-  height: 700px;
-  background: red;
+.navigation_menu--telefon a {
+  color: #E3B873;
+  font-family: FuturaDemiC, sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.navigation_menu--button {
+  width: 161px;
+  height: 37px;
+  background-color: #E3B873;
+  margin-right: 100px;
+  border: 0;
+  font-family: FuturaDemiC, sans-serif;
+  font-size: 13px;
+  text-transform: uppercase;
+  color: #ffffff;
+  cursor: pointer;
+  border-radius: 2px;
 }
 
 .slider_wrapper {
